--- a/Index.html
+++ b/Index.html
@@ -115,16 +115,138 @@
         </section>
         <section>
             <h2>Новости</h2>
-
+            <h3>новое В нашем блоге</h3>
+            <a href="#">10 способов сервировки фруктовых щербетов  к столу</a>
         </section>
         <section>
             <h2>Подписка</h2>
+            <p>Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
 
+        </section>
+        <section>
+            <h2>Карта</h2>
         </section>
     </main>
     <footer>
-        
+        <section>
+            <h2>наши соцсети</h2>
+            <ul>
+                <li>
+                    <a href="#">Fb</a>
+                </li>
+
+                <li>
+                    <a href="#">Vk</a>
+                </li>
+
+                <li>
+                    <a href="#">inst</a>
+                </li>
+
+                <li>
+                    <a href="#">twit</a>
+                </li>  
+
+            </ul>
+        </section>
+        <section>
+            <h2>
+                Сервисная информация
+            </h2>
+            <ul>
+                <li>
+                    <a href="#">
+                       Для поставщиков 
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        О производстве
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Наши документы
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        Экологические стандарты
+                    </a>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>copyright</h2>
+            <a href="#">
+                <img src="img/logo-academy.svg" alt="">
+            </a>
+            <p>Сделано в HTML Academy © 2019</p>
+        </section>
     </footer>
-    
+    <section>
+        <h2>личный кабинет</h2>
+        <form action="https://echo.htmlacademy.ru" metod="post">
+        <label for="login-login">Логин</label>
+        <input id="login-login" type="email" name="login" placeholder="emai@example.com">
+        <label for="login-password">Папроль</label>
+        <input id="login-password" type="password" name="password" placeholder="......">
+        <ul>
+            <li><a href="#">Забыли пароль?</a></li>
+            <li><a href="#">Новая регистрация</a></li>
+        </ul>
+        <button type="submit" >Войти</button>
+        </form>
+    </section>
+    <section>
+        <h2>меню</h2>
+        <ul>
+            <a href="#">
+                Новинки
+            </a>
+        </ul>
+        <ul>
+            <a href="#">
+                Сливочное
+            </a>
+        </ul>
+        <ul>
+            <a href="#">
+                Щербеты
+            </a>
+        </ul>
+        <ul>
+            <a href="#">
+                Фруктовый лед
+            </a>    
+        </ul>
+        <ul>
+            <a href="#">
+                Мелорин
+            </a>    
+        </ul>
+    </section>
+    <section>
+        <h2>поиск</h2>
+
+    </section>
+    <section>
+        <h2>обратная связь</h2>
+        <p>Мы обязательно вам ответим!</p>
+        <form action="https://echo.htmlacademy.ru" metod="post">
+            <p><input id="feedback-name" type="text" name="name" placeholder="Имя Фамилия"></p>
+            <p><input id="feedback-login" type="email" name="login" placeholder="emai@example.com"></p>            
+            <p><textarea name="message" id="feedback-message" cols="30" rows="10" placeholder="В свободной форме"></textarea></p>
+            <button type="submit" >Отправить</button>
+        </form>
+        <button type="button">закрыть</button>
+    </section>
+    <section>
+        <h2>Как до нас добраться</h2>
+        <button type="button">закрыть</button>
+    </section>
+    <section>
+        <!-- background ???-->
+    </section>
 </body>
 </html>
